# uml_hri_nerve_navigate_obstacles

./: README.md  launch_a_test.md  launch_pioneer_sim.sh  ros_5_days_notes.md  test_methods.md
chart_maker/: get_stats.py  nist_nav_test_report.py  pioneer_logger.csv  pioneer_odom.csv  pos_in_map.m  robot_pos2_logger.xlsx  stats2.ipynb
chart_maker/.ipynb_checkpoints/: stats-checkpoint.ipynb
src/a_to_b/: CMakeLists.txt  package.xml
src/a_to_b/include/: go_to_goal.h
src/a_to_b/include/a_to_b/: go_to_goal.h
src/a_to_b/launch/: position_pub.launch
src/a_to_b/src/: PositionPublisher.cpp  a_to_b.cpp
src/gz_robot_position_logger/: CMakeLists.txt  package.xml
src/gz_robot_position_logger/include/: gz_robot_position_logger.h
src/gz_robot_position_logger/msg/: GzPosLog.msg
src/gz_robot_position_logger/src/: gz_robot_position_logger.cpp
src/hector_slam/hector_geotiff/src/geotiff_writer/: geotiff_writer.cpp
src/launch/: hector_geotiff_node.launch
tests/info/: pioneer_2d_nerve2_2020.md
